5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4159/executions/1800_2565.log
== TEST (2019-06-13 00:40:06) 
-- CODE:
from numpy import *
v = array(eval(input("notas: ")))
g = array(eval(input("horas: ")))
h = int(input("carga horaria: "))

r = zeros(3, dtype=int)

for i in range(size(v)):
	if(v[i]<5):
		r[1] = r[1]+1
	elif(g[i]>h):
		r[2] = r[2]+1
	else:
		r[0] = r[0]+1
print(r)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 00:41:48) 
-- CODE:
from numpy import *
v = array(eval(input("notas: ")))
g = array(eval(input("horas: ")))
h = int(input("carga horaria: "))

r = zeros(3, dtype=int)

for i in range(size(v)):
	if(v[i]<5):
		r[1] = r[1]+1
	elif(g[i]>(3*h/4):
		r[2] = r[2]+1
	else:
		r[0] = r[0]+1
print(r)
-- ERROR:
File "XXXX", line 11
    elif(g[i]>(3*h/4):
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 00:42:06) 
-- CODE:
from numpy import *
v = array(eval(input("notas: ")))
g = array(eval(input("horas: ")))
h = int(input("carga horaria: "))

r = zeros(3, dtype=int)

for i in range(size(v)):
	if(v[i]<5):
		r[1] = r[1]+1
	elif(g[i]>(3*h/4)):
		r[2] = r[2]+1
	else:
		r[0] = r[0]+1
print(r)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 00:42:35) 
-- CODE:
from numpy import *
v = array(eval(input("notas: ")))
g = array(eval(input("horas: ")))
h = int(input("carga horaria: "))

r = zeros(3, dtype=int)

for i in range(size(v)):
	if(v[i]<5):
		r[1] = r[1]+1
	elif(g[i]>(3*h/4)):
		r[2] = r[2]+1
	else:
		r[0] = r[0]+1
print(r)
-- EXECUTION TIME:
0.958461
-- TEST CASE 1:
---- input:
[6.2,7.3,7.0,7.5,8.9]
[75,76,74,73,72]
100
---- correct output:
[2 0 3]
---- user output:
[4 0 1]
-- TEST CASE 2:
---- input:
[7.4,7.6,7.5,7.2,7.2,7.3,7.8]
[60,80,55,58,61,70,79]
80
---- correct output:
[5 0 2]
---- user output:
[3 0 4]
-- TEST CASE 3:
---- input:
[8.2,6.9,7.0,6.5,7.4,8.5,7.6,6.9,4.5,5.5]
[90,40,70,35,100,110,85,99,100,110]
120
---- correct output:
[5 1 4]
---- user output:
[5 1 4]
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 00:44:54) 
-- CODE:
from numpy import *
v = array(eval(input("notas: ")))
g = array(eval(input("horas: ")))
h = int(input("carga horaria: "))
h = (h/100)*75
r = zeros(3, dtype=int)

for i in range(size(v)):
	if(v[i]<5):
		r[1] = r[1]+1
	elif(g[i]>h:
		r[2] = r[2]+1
	else:
		r[0] = r[0]+1
print(r)
-- EXECUTION TIME:
0.524016
-- ERROR:
  File "/home/codebench/codes/1800/2565/main.py", line 11
    elif(g[i]>h:
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 00:45:30) 
-- CODE:
from numpy import *
v = array(eval(input("notas: ")))
g = array(eval(input("horas: ")))
h = int(input("carga horaria: "))
f = (h/100)*75
r = zeros(3, dtype=int)

for i in range(size(v)):
	if(v[i]<5):
		r[1] = r[1]+1
	elif(g[i]>f):
		r[2] = r[2]+1
	else:
		r[0] = r[0]+1
print(r)
-- EXECUTION TIME:
1.15238
-- TEST CASE 1:
---- input:
[6.2,7.3,7.0,7.5,8.9]
[75,76,74,73,72]
100
---- correct output:
[2 0 3]
---- user output:
[4 0 1]
-- TEST CASE 2:
---- input:
[7.4,7.6,7.5,7.2,7.2,7.3,7.8]
[60,80,55,58,61,70,79]
80
---- correct output:
[5 0 2]
---- user output:
[3 0 4]
-- TEST CASE 3:
---- input:
[8.2,6.9,7.0,6.5,7.4,8.5,7.6,6.9,4.5,5.5]
[90,40,70,35,100,110,85,99,100,110]
120
---- correct output:
[5 1 4]
---- user output:
[5 1 4]
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 00:49:12) 
-- CODE:
from numpy import *
v = array(eval(input("notas: ")))
g = array(eval(input("horas: ")))
h = int(input("carga horaria: "))
f = (h/100)*75
r = zeros(3, dtype=int)

for i in range(size(v)):
	if(v[i]<5):
		r[1] = r[1]+1
	elif(g[i]<f):
		r[2] = r[2]+1
	else:
		r[0] = r[0]+1
print(r)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 00:49:41) 
-- CODE:
from numpy import *
v = array(eval(input("notas: ")))
g = array(eval(input("horas: ")))
h = int(input("carga horaria: "))
f = (h/100)*75
r = zeros(3, dtype=int)

for i in range(size(v)):
	if(v[i]<5):
		r[1] = r[1]+1
	elif(g[i]<f):
		r[2] = r[2]+1
	else:
		r[0] = r[0]+1
print(r)
-- EXECUTION TIME:
0.916351
-- TEST CASE 1:
---- input:
[6.2,7.3,7.0,7.5,8.9]
[75,76,74,73,72]
100
---- correct output:
[2 0 3]
---- user output:
[2 0 3]
-- TEST CASE 2:
---- input:
[7.4,7.6,7.5,7.2,7.2,7.3,7.8]
[60,80,55,58,61,70,79]
80
---- correct output:
[5 0 2]
---- user output:
[5 0 2]
-- TEST CASE 3:
---- input:
[8.2,6.9,7.0,6.5,7.4,8.5,7.6,6.9,4.5,5.5]
[90,40,70,35,100,110,85,99,100,110]
120
---- correct output:
[5 1 4]
---- user output:
[5 1 4]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
